--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+ 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet"> 
 	<meta charset="UTF-8">
 	<title>Boomer Clicker</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <div id="wrapper">
@@ -15,9 +15,9 @@
 			<div id="div_score"><span> clicksplex </span><span id="clickplex"></span></div> 
 
 
-<a href="#" id="can" onclick="add()"><img src="can.png" alt=""></a>
+<a href="#" id="can" onclick="add()"><img src="images/can.png" alt=""></a>
 
-<script src="script.js" charset="utf-8"></script>
+<script src="scripts/script.js" charset="utf-8"></script>
 			
 
 
