--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <a href="#" id="can" onclick="add()"><img src="images/can.png" alt=""></a>
 
+<button onclick="reset()">reset</button>
+
 <script src="scripts/script.js" charset="utf-8"></script>
 			
 
