--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id="wrapper">
 			<h1>boomer clicker</h1>
 
-			<div id="div_score"><span> clicks: </span><span id="result"></span></div> 
-			<div id="div_score"><span> clicksplex </span><span id="clickplex"></span></div> 
+			<div id="div_score"><span> clicks: </span><span id="result"> 0</span></div> 
+			<div id="div_score"><span> clicksplex </span><span id="clickplex"> 1</span></div> 
 
 
 <a href="#" id="can" onclick="add()"><img src="images/can.png" alt=""></a>
